<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_clouds_morning"
    android:orientation="vertical"
    style="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".city.MainActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cityNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityName"
            android:textColor="@color/colorBlack"
            android:textSize="36sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/weatherContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitle"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/temperaturesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/generalTemperaturesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generalTemperatures"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forecastText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="@string/forecast"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dayContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/day"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/temperatureNowContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dayContainer"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/sunImage"
                app:srcCompat="@drawable/loader" />

            <TextView
                android:id="@+id/temperatureNowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperatureNow"
                android:textColor="@color/colorBlack"
                android:textSize="74sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/weatherInformationContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/temperatureNowContainer"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="325dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/sunriseInformationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/sunrise"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="start"
                    android:text="@string/sunriseText"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sunriseValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="end"
                    android:text="@string/sunriseValue"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sunsetInformationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sunriseInformationContainer"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/sunset" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="23dp"
                    android:gravity="start"
                    android:text="@string/sunsetText"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/sunsetValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="end"
                    android:text="@string/sunriseValue"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_below="@+id/sunriseInformationContainer"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="105dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="105dp"
                app:srcCompat="@drawable/line" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="130dp"
                android:rotation="90"
                android:scaleX=".75"
                app:srcCompat="@drawable/line" />


            <RelativeLayout
                android:id="@+id/compositionInformationContainer"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weatherHumidity"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:layout_marginEnd="10dp"
                        />

                    <TextView
                        android:id="@+id/humidityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/humidityDefault"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/weatherPressure"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:layout_marginEnd="10dp"
                        />

                    <TextView
                        android:id="@+id/pressureValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/pressureDefault"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

