<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_land_1"
    android:orientation="vertical"
    tools:context=".city.MainActivity">

    <fragment
        android:id="@+id/cityFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.example.weatherland.city.CityFragment"
        />

    <RelativeLayout
        android:id="@+id/weatherContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/temperaturesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/generalTemperaturesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generalTemperatures"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forecastText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="@string/forecast"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dayContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/day"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/temperatureNowContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dayContainer"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sun"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/sun_image"
                app:srcCompat="@drawable/sun" />

            <TextView
                android:id="@+id/temperatureNowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperatureNow"
                android:textColor="@color/colorBlack"
                android:textSize="74sp"
                />

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/weather_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="411dp"
        android:layout_marginTop="731dp"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="731dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorWithe"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

